replace items with groups
