# ring/pydantic_schemas/group.py
@@ -10,6 +10,10 @@ class GroupCreate(GroupBase):
     admin_api_identifier: str
 
 
+class GroupUpdate(BaseModel):
+    name: str | None = None
+
+
 class Group(GroupBase):
     model_config = ConfigDict(from_attributes=True)
 
